--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>first_project</title>
-    </head>
-    <body>
-    <h1>Welcome to my first project</h1>
-    <p>This will be a simple yet first project of html</p>
-    <p>today we will talk about bayern munich players</p>
-    <h2>on top of all, we will talk about goats</h2>
-    <p>for me personally the goat is Thomas Muller. followed by manuel neuer and kimmich</p>
-    <p> well, that's all for today, ill create more in the future</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>First Project</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 1rem;
+      line-height: 1.5;
+      background: #f0f0f0;
+      color: #333;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin: 1rem 0;
+      display: block;
+    }
+    h1, h2 {
+      color: #990000;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to my first project</h1>
+  <p>This will be a simple yet first project of HTML.</p>
+  <p>Today we will talk about Bayern Munich players.</p>
+  <h2>On top of all, we will talk about GOATs</h2>
+  <p>For me personally the GOAT is Thomas Müller, followed by Manuel Neuer and Kimmich.</p>
+
+  <!-- Image added here -->
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Thomas_Müller_2020.jpg/440px-Thomas_Müller_2020.jpg" alt="Thomas Müller" />
+
+  <p>Well, that's all for today, I'll create more in the future.</p>
 </body>
-    </html>
+</html>
